--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
     <img src="FullLogo.png" width="470" height="70">
     <h1>입력박스에 Url을 입력해주세요.</h1>
-    <b style="color:rgb(23, 94, 161)">한국 도메인(Url)을 입력해주세요.</b>
+    <b style="color:rgb(23, 94, 161)">Url을 입력해주세요.</b>
     <h2> [ <input type="text" id="name" onchange="printName()" size=50/>  ]  
         <button onclick="pushbtn(origin_result, modify_result)">
             <img class="btm-img" src="PhishingLogo.PNG" height ="18" width="26" />
