Update index.html_(remove api key)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         var r_domain = mo;
 
         var url = 'http://apis.data.go.kr/B551505/whois/domain_name'; /*URL*/
-        var queryParams = '?' + encodeURIComponent('serviceKey') + '=' + 'cUWf07DL4LpO9A5FA1fWq3vYGsYMKLO1bKVkyYJX1rWeCGciZpn1kyP7l5nwuTfckSvUUuMsdW4f7YuKHrUX%2Bw%3D%3D'; /*Service Key*/
+        var queryParams = '?' + encodeURIComponent('serviceKey') + '=' + '{Service_Key}'; /*Service Key*/
         queryParams += '&' + encodeURIComponent('query') + '=' + encodeURIComponent(r_domain); /*도메인 이름, http://... 형식 X*/
         queryParams += '&' + encodeURIComponent('answer') + '=' + encodeURIComponent('JSON'); /**/
         xhr.open('GET', url + queryParams);
